--- a/crates/bevy_internal/Cargo.toml
+++ b/crates/bevy_internal/Cargo.toml
@@ -17,6 +17,7 @@ trace = [
     "bevy_log/trace",
     "bevy_render?/trace",
     "bevy_hierarchy/trace",
+    "bevy_sprite/trace",
     "bevy_winit/trace"
 ]
 trace_chrome = [ "bevy_log/tracing-chrome" ]
