Improvements to parallax mapping code for comprehensibility and correctness
'height' -> 'depth' as the texture has 0 as minimum depth and 1 as maximum
depth.

Make the Vt used in parallax mapping point from the camera to the fragment to
make the algorithm easier to understand as the ray points into the surface.
Adjust the UV maths as appropriate to step forward instead of backward.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -568,7 +568,7 @@ required-features = [ "jpeg" ]
 
 [package.metadata.example.parallax_mapping]
 name = "Parallax Mapping"
-description = "Demonstrates use of a normal map and height map for parallax mapping"
+description = "Demonstrates use of a normal map and depth map for parallax mapping"
 category = "3D Rendering"
 wasm = true
 
