--- a/crates/bevy_utils/Cargo.toml
+++ b/crates/bevy_utils/Cargo.toml
@@ -23,6 +23,7 @@ thiserror = "1.0"
 thread_local = "1.0"
 nonmax = "0.5"
 smallvec = { version = "1.11", features = ["serde", "union", "const_generics"] }
+crossbeam-channel = "0.5.12"
 
 [dev-dependencies]
 static_assertions = "1.1.0"
